# flower-generator

./: .pre-commit-config.yaml  .travis.yml  .vale.ini  README.md  pyproject.toml
.cicd-tools/: configuration.json
.cicd-tools/boxes/bootstrap/libraries/: logging.sh
.cicd-tools/boxes/bootstrap/pre-commit/: ansible-lint.sh  workflow-header-lint.sh
.cicd-tools/boxes/bootstrap/schemas/: cookiecutter.json
.cookiecutter/: cookiecutter.json
.github/actions/action-00-toolbox/: action.yml
.github/config/actions/: gaurav-nelson-github-action-markdown-link-check.json
.github/config/workflows/: workflow-publish-to-galaxy.json  workflow-push.json
.github/deactivated/: .job-00-start.yml  .job-00-success.yml  .job-30-documentation.yml  .job-40-molecule-lint.yml  .job-40-molecule-test.yml  .job-80-yaml-lint.yml  .job-99-create-release.yml  .job-99-import-role.yml  workflow-publish-to-galaxy.yml  workflow-push.yml
.github/markdown/: ISSUE_TEMPLATE.md
.github/scripts/: ansible_cache.sh  changelog.sh  job-50-test-precommit.sh  poetry.sh  pushed_commit_range.sh  release.js  setup.sh  step-setup-environment.sh  version.sh  workflow-setup-environment.sh
.github/workflows/: .job-10-security.yml  .job-80-commit-lint.yml  .job-80-toml-lint.yml  .job-80-workflow-lint.yml  push.yml  release.yml  workflow-publish-to-galaxy.yml  workflow-push.yml
.vale/Vocab/flower-generator/: accept.txt
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/docker1/: converge.yml
molecule/hostmachine1/: converge.yml
tasks/: main.yml
tests/: test.yml
vars/: main.yml
(+1 files in other folders)
