[tool.poetry]
name = "flower-generator"
version = "0.0.1"
description = "Not the baking kind."
authors = ["Niall Byrne <niall@niallbyrne.ca>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
ansible = "^6.0.0"

[tool.poetry.dev-dependencies]
ansible-compat = "!=2.1.0" # https://github.com/ansible-community/ansible-compat/issues/114
ansible-lint = "^5.3.2"
commitizen = "^2.20.4"
molecule = {extras = ["docker"], version = "^3.5.2"}
yamllint = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
