
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]

[tool]

  [tool.commitizen]
    bump_message = "bump(RELEASE): $current_version → $new_version"
    version = "0.1.0"
    version_files = ["pyproject.toml:version"]

  [tool.poetry]
    authors = ["Niall Byrne <niall@niallbyrne.ca>"]
    description = "Not the baking kind."
    name = "flower-generator"
    version = "0.1.0"

    [tool.poetry.dependencies]
      python = ">=3.9.0,<4.0"

    [tool.poetry.dev-dependencies]
      ansible = "^7.2.0"
      commitizen = "^3.0.0"
      pre-commit = "^3.1.0"
      yamllint = "^1.29.0"

      [tool.poetry.dev-dependencies.ansible-lint]
        markers = "platform_system != 'Windows'"
        version = "^6.12.2"

      [tool.poetry.dev-dependencies.molecule]
        extras = ["docker"]
        version = "^4.0.0"
